# esp32p4

./: README.md
ESP32-P4-Platform/: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  THIRD_PARTY.md
ESP32-P4-Platform/.github/: PULL_REQUEST_TEMPLATE.md
ESP32-P4-Platform/config/: esp32p4_rev_pre_v3.defaults  esp32p4_rev_v3_0.defaults  esp32p4_rev_v3_1.defaults
ESP32-P4-Platform/docs/: CI.md  ESP32P4_REVISION_CONFIG.md  ESP32P4_REVISION_CONFIG_CN.md  EXAMPLES_GUIDE_CN.md  EXAMPLE_ROADMAP_CN.md  GETTING_STARTED.md  GETTING_STARTED_CN.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CN.md
ESP32-P4-Platform/examples/: README.md
ESP32-P4-Platform/firmware/: README.md
ESP32-P4-Platform/firmware/brookesia/components/Settings/: CMakeLists.txt  Settings.cpp  Settings.hpp
ESP32-P4-Platform/firmware/brookesia/components/Settings/assets/: BLE.c  img_app_settings.c  logo.c  wifi_1.c  wifi_2.c  wifi_3.c  wifi_4.c
ESP32-P4-Platform/firmware/brookesia/components/Settings/ui/: AboutPage.cpp  AboutPage.hpp  DisplayPage.cpp  DisplayPage.hpp  SoundPage.cpp  SoundPage.hpp  WlanPage.cpp  WlanPage.hpp
ESP32-P4-Platform/study/: ESP32-P4 初学者交互式学习路线图.md  学习指南.md
code/01_HowToCreateProject/: CMakeLists.txt  README.md  README_CN.md
code/02_HelloWorld/: CMakeLists.txt  README_CN.md
code/03_nvs_counter/: CMakeLists.txt  README_CN.md
code/04_freertos_tasks/: CMakeLists.txt  README.md  README_CN.md
code/05_gpio_pwm_led/: README_CN.md  sdkconfig.defaults
(+211 files in other folders)
